<resources>
    <string name="app_name">MelodyShare</string>
    <string name="button_message">Add Melody</string>
    <string name="darkModeBtnTitle">Dark Mode</string>
    <string name="lightModeBtnText">Light Mode</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="button_clicked_message">Melody \"%1$s\" added</string>
    <string name="button_clicked_message_titleless">Added melody without title</string>
    <string name="menu_addMelody">Add</string>
    <string name="menu_cancelMelody">Cancel</string>
    <string name="save_melody">Save Melody</string>
    <string name="button_clicked_message_saved">Melody \"%1$s\" Saved</string>
    <string name="button_clicked_message_saved_titleless">Saved Melody without title</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_fail">User sign-in failed</string>
    <string name="add_note">Add Note</string>
    <string name="remove_note">Remove Note</string>
    <string name="remove_melody">Remove Melody</string>
    <string name="feed">Feed</string>
    <string name="settings">Settings</string>
    <string name="likes">Likes</string>
    <string name="friends">Friends</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_description_error">Title and description have to be valid!</string>
    <string name="alpha_num_space_error">Letter, numbers, and spaces only</string>
    <string name="num_error">Numbers only</string>
    <string name="search_icon_description">magnifying glass</string>
    <string name="lorem" translatable="false">Lorem</string>
    <string name="ipsum" translatable="false">Ipsum</string>
    <string name="darkModeBtnDescription">Change theme</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="click_top_right">Click on the icon in the top right</string>
    <string name="to_be_implemented">(To be implemented…)</string>
    <string name="play_icon_description">play</string>
    <string name="friend_action_icon_description">Add or remove friend</string>
    <string name="like">like</string>
    <string name="cannot_because_offline">Internet connection needed</string>
    <string name="default_notification_channel_id" translatable="false">melodyshare_notification_channel</string>
    <string name="notification_channel">MelodyShare Notification Channel</string>
    <string name="melody_received_title">Melody Received!</string>
    <string name="melody_received_description">\'%1$s\' shared melody \'%2$s\' with you!</string>
</resources>